force-app/main/default/objects/LexPRO_Coverage__mdt/LexPRO_Coverage__mdt.object-meta.xml
<CustomObject>
    <description>REV-69 — config-driven coverage for the LexPRO Deal Qualifier. One record per coverage region (with map position + covered flag) or per work area (with Core/Beyond tier). Editable by RevOps/content without a deploy.</description>
    <label>LexPRO Coverage</label>
    <pluralLabel>LexPRO Coverage</pluralLabel>
</CustomObject>