force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Covered__c.field-meta.xml
<CustomField>
    <fullName>Covered__c</fullName>
    <description>REV-69: regions only — is this region covered by Lexology PRO? Unchecked renders as a coverage gap.</description>
    <defaultValue>false</defaultValue>
    <label>Covered</label>
    <type>Checkbox</type>
</CustomField>