force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Map_Left__c.field-meta.xml
<CustomField>
    <fullName>Map_Left__c</fullName>
    <description>REV-69: regions only — horizontal position on the coverage map, as a percentage (0-100) from the left.</description>
    <label>Map Left %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>