force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Map_Top__c.field-meta.xml
<CustomField>
    <fullName>Map_Top__c</fullName>
    <description>REV-69: regions only — vertical position on the coverage map, as a percentage (0-100) from the top.</description>
    <label>Map Top %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>