force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>REV-69: optional messaging shown with the item — e.g. gap guidance for an uncovered region.</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>