force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>REV-69: work areas only — Core (we lead here) or Beyond (covered, confirm with content).</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Beyond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>