force-app/main/default/objects/LexPRO_Coverage__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>REV-69: discriminator — Region (coverage map pin) or WorkArea (Core/Beyond practice area).</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>WorkArea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>